package junior.contactlist.controller;

import junior.contactlist.view.WebView;

public class WebController implements ContactListController {

    private WebView view;

    @Override
    public void run() {
//        TODO
    }
}
